--- a/rslidar_pointcloud/package.xml
+++ b/rslidar_pointcloud/package.xml
@@ -5,7 +5,7 @@
   <version>0.1.0</version>
   <description>Point cloud conversions for rslidar 3D LIDARs.</description>
   <maintainer email="fredrik@dynorobotics.se">Fredrik Löfgren</maintainer>
-  <license>Apache License 2.0</license>
+  <license>BSD</license>
   <author>Fredrik Löfgren</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
