--- a/rslidar_pointcloud/CMakeLists.txt
+++ b/rslidar_pointcloud/CMakeLists.txt
@@ -22,13 +22,10 @@ find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(rslidar_msgs REQUIRED)
 find_package(pcl_conversions REQUIRED)
-find_package(PCL REQUIRED)
-
-link_directories(${PCL_LIBRARY_DIRS})
-add_definitions(${PCL_DEFINITIONS})
+find_package(Boost REQUIRED COMPONENTS system)
 
 add_executable(cloud_node src/cloud_node.cpp src/convert.cpp src/rawdata.cpp)
-target_link_libraries(cloud_node ${rclcpp_LIBRARIES} ${PCL_LIBRARIES})
+target_link_libraries(cloud_node ${rclcpp_LIBRARIES} ${Boost_LIBRARIES})
 ament_target_dependencies(cloud_node rclcpp std_msgs rslidar_msgs sensor_msgs pcl_conversions)
 
 
