--- a/rslidar_driver/package.xml
+++ b/rslidar_driver/package.xml
@@ -14,13 +14,13 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>rslidar_msgs</build_depend>
-  <build_depend>libpcap-dev</build_depend>
+  <build_depend>libpcap</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>rslidar_msgs</exec_depend>
-  <exec_depend>libpcap-dev</exec_depend>
+  <exec_depend>libpcap</exec_depend>
 
   <depend>diagnostic_updater</depend>
   
