--- a/rslidar_pointcloud/package.xml
+++ b/rslidar_pointcloud/package.xml
@@ -15,6 +15,7 @@
   <depend>sensor_msgs</depend>
   <depend>rslidar_msgs</depend>
   <depend>pcl_conversions</depend>
+  <depend>pcl_msgs</depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
