--- a/rslidar_driver/package.xml
+++ b/rslidar_driver/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
-  <name>ros2_rslidar_driver</name>
+  <name>rslidar_driver</name>
   <version>0.1.0</version>
   <description>Package for communicating with the RoboSense LIDAR sensors</description>
   <maintainer email="fredrik@dynorobotics.se">Fredrik Löfgren</maintainer>
@@ -14,12 +14,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>rslidar_msgs</build_depend>
+  <build_depend>rslidar_pointcloud</build_depend>
   <build_depend>libpcap</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>rslidar_msgs</exec_depend>
+  <exec_depend>rslidar_pointcloud</exec_depend>
   <exec_depend>libpcap</exec_depend>
 
   <depend>diagnostic_updater</depend>
